# Rag-Based-Agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_adjust_embedding_dimension_to_384.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  chat.py  dashboard.py  documents.py  organizations.py  search.py
app/core/: config.py  exceptions.py  security.py
app/models/: __init__.py  access_rule.py  chat_history.py  document.py  document_chunk.py  mixins.py  organization.py  user.py
app/schemas/: admin.py  auth.py  chat.py  document.py  organization.py
app/services/: auth_service.py  chunk_service.py  embedding_service.py  llm_service.py  rag_service.py  upload_service.py
app/tests/: test_health_and_auth.py  test_upload_and_chat_validation.py
