[project]
name = "rag-knowledgebase-backend"
version = "0.1.0"
description = "Production-grade RAG knowledgebase backend with FastAPI and pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "pgvector>=0.3.4",
    "pydantic>=2.8.2",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.9.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.2",
    "pdfplumber>=0.11.4",
    "PyPDF2>=3.0.1",
    "python-slugify>=8.0.4",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
